Fix httpUserAgent setting after the view's initialization

Set user agent override on all WebContents of the specific
BrowserContext.

Task-number: QTBUG-47976
Change-Id: I4fc6f8d79aff6f372ca48d82642b3eab60f933d1
Reviewed-by: Jocelyn Turcotte (Woboq GmbH) <jturcotte@woboq.com>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@theqtcompany.com>